cmake_minimum_required(VERSION 3.10.0)
project(toy-sequencer VERSION 0.1.0 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# removing this will cause a linker error on arm64
set(CMAKE_BUILD_TYPE Release)

include(CTest)
enable_testing()

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_subdirectory(src) 
add_subdirectory(tests)
